<resources>
    <string name="app_name">Projekt</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_title">HR project</string>
    <string name="task_detail">Set-up company profile</string>
    <string name="task_due_date">Janette Doe: 3:45 pm</string>
    <string name="task_assignee">Assignee: James Doe</string>
    <string name="task_deadline">Deadline: June 01 2021</string>
    <string name="task_priority">High prio</string>
    <string name="task_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboret dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate…</string>
    <string name="task_progressbar">0% Done</string>
    <string name="my_tasks">My Tasks</string>
    <string name="create_new_task">Create new task</string>
    <string name="enter_task_name_here">Enter task name here</string>
    <string name="edit_task">Edit task</string>
    <string name="update">Update</string>
</resources>