<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_margin="5dp"
        android:backgroundTint="#2264F4"
        app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">
        <TextView
            android:id="@+id/creator_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/task_title"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/title_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/task_detail"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/due_date_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/task_due_date"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/assignee_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/task_assignee"
            android:textColor="@color/black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="3dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/deadline_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/task_deadline"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/priority_id"
                android:layout_marginTop="1dp"
                android:layout_width="96dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/task_priority"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/priority_dot_id"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/priority_circle"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_description"
                android:padding="12dp">
            </TextView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/progress_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dp"
                android:text="@string/task_progressbar" />
        </RelativeLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_weight="3">
        </ProgressBar>
    </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>