<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="168px"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_arrow"
            android:padding="12dp"
            android:background="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/edit_task"
            android:textSize="60px" />

        <Button
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:text="@string/update" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/select_project_spinner"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="140px"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="140px"
            android:background="@color/white"
            android:text="@string/enter_task_name_here"
            android:gravity="center_vertical"
            android:layout_margin="8dp">
        </TextView>

        <Spinner
            android:id="@+id/select_assignee_spinner"
            android:layout_width="match_parent"
            android:layout_height="140px"
            android:background="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140px"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <Spinner
            android:id="@+id/select_priority_spinner"
            android:layout_height="match_parent"
            android:layout_width="0px"
            android:layout_weight=".5"
            android:layout_alignParentLeft="true"
            android:background="@color/white"
            android:layout_margin="8dp"/>

        <Spinner
            android:id="@+id/select_deadline_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="12dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="12px">
        </EditText>
    </FrameLayout>

</LinearLayout>